# WordDB

./: .gitignore  Cargo.toml  Dockerfile  words.db
src/: main.rs
src/routes/: db.rs  mod.rs
