[package]
name = "card_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
rusqlite = "0.29.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.58"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
warp = "0.3.5"
